k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imrbs
  labels:
    app.kubernetes.io/name: imrbs
    app.kubernetes.io/part-of: imrbs
